--- a/xkj/index.html
+++ b/xkj/index.html
@@ -185,14 +185,14 @@
 			}
 
 		</script>
-		<link href="./resource/css/index.css" rel="stylesheet">
+		<link href="/pages/xkj/resource/css/index.css" rel="stylesheet">
 	</head>
 
 	<body>
 		<div id="app"></div>
 		<div class="load-mask"> <span class="load-text-wrap"> <span class="load-text-circle"></span><span id="load-text">0%</span></span></div>
-		<script src="./resource/js/manifest.chunk.js"></script>
-		<script src="./resource/js/index.chunk.js"></script>
+		<script src="/pages/xkj/resource/js/manifest.chunk.js"></script>
+		<script src="/pages/xkj/resource/js/index.chunk.js"></script>
 	</body>
 
 </html>
