--- a/test2/index.html
+++ b/test2/index.html
@@ -53,7 +53,7 @@
         });
 
       let areaMap2 = new AreaMap({
-        el: 'container',
+        el: 'container2',
         areaName: '观山湖区',
         filterAreaRegExp: /^52/,
       });
