--- a/test2/index.html
+++ b/test2/index.html
@@ -13,12 +13,9 @@
         background-color: #fff;
       }
 
-      #container, #container2 {
-        float: left;
+      #container {
         width: 800px;
         height: 800px;
-        margin: 16px;
-        border: 1px solid #eee;
         background-color: transparent !important; /* 地图背景透明 */
       }
 
@@ -30,7 +27,6 @@
 
   <body>
     <div id="container"></div>
-    <div id="container2"></div>
     <script
       type="text/javascript"
       src="https://webapi.amap.com/maps?v=1.4.14&key=2f86791f52fd930b054e74c383cd016f&plugin=Map3D,AMap.DistrictSearch"
@@ -41,7 +37,7 @@
       let areaMap = new AreaMap({
         el: 'container',
         areaName: '贵阳市',
-        filterAreaRegExp: /^52/,
+        filterAreaRegExp: /^52/
       });
 
       areaMap
@@ -50,14 +46,55 @@
         })
         .on('childrensChange', function(arg) {
           console.log('childrensChange', arg);
-        });
+        })
+        .on('finish', function() {
+          Array.from({ length: 10 }).forEach(v => {
+            var center = areaMap.areaCenter.map(v => {
+              var rand = Math.random();
+              var _rand = Math.random();
+              return rand > 0.5 ? (v + _rand) : (v - _rand)
+            })
+            var marker = new AMap.Marker({
+              position: center,
+              offset: new AMap.Pixel(-10, -10),
+              icon: 'https://raw.githubusercontent.com/Iixianjie/AmapDistrict/master/img/pointer1.png', // 添加 Icon 图标 URL
+              title: '实践中心',
+              map: areaMap.map
+            });
+          });
 
-      let areaMap2 = new AreaMap({
-        el: 'container2',
-        areaName: '观山湖区',
-        filterAreaRegExp: /^52/,
-      });
-        
+          Array.from({ length: 100 }).forEach(v => {
+            var center = areaMap.areaCenter.map(v => {
+              var rand = Math.random();
+              var _rand = Math.random();
+              return rand > 0.5 ? (v + _rand) : (v - _rand)
+            })
+            var marker = new AMap.Marker({
+              position: center,
+              offset: new AMap.Pixel(-10, -10),
+              icon: 'https://raw.githubusercontent.com/Iixianjie/AmapDistrict/master/img/pointer2.png', // 添加 Icon 图标 URL
+              title: '实践站',
+              map: areaMap.map
+            });
+          });
+
+          Array.from({ length: 400 }).forEach(v => {
+            var center = areaMap.areaCenter.map(v => {
+              var rand = Math.random();
+              var _rand = Math.random();
+              return rand > 0.5 ? (v + _rand) : (v - _rand)
+            })
+            var marker = new AMap.Marker({
+              position: center,
+              offset: new AMap.Pixel(-10, -10),
+              icon: 'https://raw.githubusercontent.com/Iixianjie/AmapDistrict/master/img/pointer3.png', // 添加 Icon 图标 URL
+              title: '实践所',
+              map: areaMap.map
+            });
+          });
+
+
+        });
     </script>
   </body>
 </html>
